# TemplateApp

./: AboutDialog.qml  AboutDialogForm.ui.qml  CMakeLists.txt  ContactList.qml  HomeForm.ui.qml  MobileFileDialog.qml  MobileFileDialogForm.ui.qml  Page1Form.ui.qml  Page2Form.ui.qml  SettingsDialog.qml  SettingsDialogForm.ui.qml  TemplateApp.qml  applicationdata.cpp  applicationdata.h  main.cpp
.github/workflows/: Linux.yml  MacOS.yml  Windows.yml
android/: AndroidManifest.xml
